--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
     font-size: 48px;
     margin-bottom: 20px;
   }
+  h2 {
+    position: center;
+    float:right;
+  }
   
   p {
     font-size: 24px;
