--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
   }
   
   body {
-    background-color: #0c0c0c;
-    color: #ff0000b3;
-    font-family: Arial, sans-serif;
+    background-color: #32ff05;
+    color: #0400ffb3;
+    font-family: "Audiowide", sans-serif;
     font-size: 16px;
     line-height: 1.5;
   }
@@ -42,7 +42,7 @@
     width: 100%;
     margin-bottom: 140px;
     padding: 20px;
-    background-color: #ff0000;
+    background-color: #031764b3;
     border-radius: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s;
