--- a/style.css
+++ b/style.css
@@ -40,35 +40,35 @@
   
   .download-card {
     width: 100%;
-    margin-bottom: 140px;
+    margin-bottom: 120px;
     padding: 20px;
     background-color: #031764b3;
-    border-radius: 20px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.3s;
+    border-radius: 30px;
+    box-shadow: 0 0 40px rgba(25, 4, 253, 0.2);
+    transition: box-shadow 0.1s;
   }
   
   .download-card:hover {
-  /* Start the shake animation and make the animation last for 0.5 seconds */
-  animation: shake 0.5s;
-
-  /* When the animation is finished, start again */
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+  
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
   
   .download-icon {
     width: 100%;
@@ -103,5 +103,26 @@
     font-size: 16px;
     opacity: 0.7;
   }
+  .counter {
+    display: inline-block;
+    margin: 1px;
+    padding: 1px;
+    background-color: #0440f5;
+    border-radius: 10px;
+    float: right; /* add this property to float the counter to the right */
+  }
+  
+  
+  .count {
+    font-size: 48px;
+    font-weight: bold;
+    color: #333;
+  }
+  
+  .text {
+    font-size: 24px;
+    color: #666;
+  }
+  
   
   
